force-app/main/default/objects/Meeting_WF_Publish_Log__c/Meeting_WF_Publish_Log__c.object-meta.xml
<CustomObject>
    <label>Meeting WF Publish Log</label>
    <nameField>
        <displayFormat>WFPL-{00000}</displayFormat>
        <label>Meeting WF Publish Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Meeting WF Publish Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>