force-app/main/default/objects/Meeting_WF_Publish_Log__c/fields/Meeting_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Record_Type__c</fullName>
    <description>Meeting WF config</description>
    <label>Meeting Record Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>