force-app/main/default/objects/Meeting_WF_Publish_Log__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Meeting WF config</description>
    <label>Notes</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>