force-app/main/default/objects/Meeting_WF_Publish_Log__c/fields/Published_By__c.field-meta.xml
<CustomField>
    <fullName>Published_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Meeting WF config</description>
    <label>Published By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>WF Publish Logs</relationshipLabel>
    <relationshipName>WF_Publish_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>