force-app/main/default/objects/Meeting_WF_Publish_Log__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <description>Meeting WF config</description>
    <label>Version</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>