force-app/main/default/objects/Meeting_WF_Publish_Log__c/fields/Workflow__c.field-meta.xml
<CustomField>
    <fullName>Workflow__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Meeting WF config</description>
    <label>Workflow</label>
    <referenceTo>Meeting_Workflow__c</referenceTo>
    <relationshipLabel>Publish Logs</relationshipLabel>
    <relationshipName>Publish_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>